DLS-12306 | Update test runner and changes required for migration/upgrade